* update source and target level to 17, update maven-plugins and dependencies. * ignore all tests using MutabilityDetector for now, because it is not yet compatible with java 17. * fix javadoc headings.
Signed-off-by: Johannes Schneider <johannes.schneider@bosch.io>